--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "gatsby": "^2.3.15",
     "gatsby-background-image": "^0.2.9",
     "gatsby-image": "^2.0.37",
